<!--
MIT License
Copyright (c) 2018 Michele Maione
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>
    <string name="app_name">RationesCurare</string>

    <string name="GestioneCasse">Gestione casse</string>
    <string name="Casse">Casse</string>
    <string name="Calendario">Calendario</string>
    <string name="Grafico">Grafico</string>
    <string name="Utente">Utente</string>
    <string name="Movimenti_Periodici">Movimenti periodici</string>
    <string name="DataBaseSync">Sincronizza DB</string>

    <string name="action_Oggi">Oggi</string>
    <string name="action_MesePrecedente">Mese precedente</string>
    <string name="action_MeseSuccessivo">Mese successivo</string>
    <string name="action_AnnoPrecedente">Anno precedente</string>
    <string name="action_AnnoSuccessivo">Anno successivo</string>

    <string name="action_Annuale">Annuale</string>
    <string name="action_Mensile">Mensile</string>

    <string name="action_Sincronizza">Sincronizza</string>

    <string name="action_modifica">Modifica</string>
    <string name="action_dettaglio">Dettaglio</string>
    <string name="action_Cerca">Cerca</string>
    <string name="action_Periodico">Periodico</string>
    <string name="action_Giroconto">Giroconto</string>
    <string name="action_nuovo">Nuovo</string>
    <string name="action_Salva">Salva</string>
    <string name="action_Pulisci">Pulisci</string>
    <string name="action_Annulla">Annulla</string>
    <string name="action_Elimina">Elimina</string>
    <string name="action_settings">Impostazioni</string>

    <string name="GetstionePiccolaContabilita">Gestione piccola contabilità</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_rationes_curare">RationesCurare</string>

    <string name="navigation_drawer_open">Apri menù</string>
    <string name="navigation_drawer_close">Chiudi menù</string>
</resources>
