<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_Annulla"
        android:title="@string/action_Annulla"
        android:showAsAction="always"
        android:icon="@drawable/arrow_undo"
        />
    <item
        android:id="@+id/action_nuovo"
        android:title="@string/action_nuovo"
        android:showAsAction="always"
        android:icon="@drawable/add"
        />
    <item
        android:id="@+id/action_Giroconto"
        android:title="@string/action_Giroconto"
        android:showAsAction="always"
        android:icon="@drawable/giroconto"
        />


    <item
        android:id="@+id/a_More"
        android:showAsAction="always"
        android:icon="@drawable/menu"
        android:title="Altro">
        <menu>

            <item
                android:id="@+id/action_Periodico"
                android:title="@string/action_Periodico"
                android:showAsAction="never"
                android:icon="@drawable/periodici"
                />
            <item
                android:id="@+id/action_modifica"
                android:title="@string/action_modifica"
                android:showAsAction="never"
                android:icon="@drawable/application_edit"
                />

            <item
                android:id="@+id/action_Elimina"
                android:title="@string/action_Elimina"
                android:showAsAction="never"
                android:icon="@drawable/delete"
                />

        </menu>
    </item>
</menu>